# slang-rs

./: Cargo.toml
slang-sys/: Cargo.toml
src/: lib.rs
src/reflection/: shader.rs  user_attribute.rs
